It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Wed, Mar 4, 2008
---------------------------------------------------------------------
- Refactored tools menu in lists to use block div.
- Refactored lead conversion to use remote form.

Tue, Mar 3, 2008
---------------------------------------------------------------------
- Refactored lead star rating to always show 5 stars (grayed out or not).
- Removed [notes] field from core models and forms.
- Created v0.1 "Steinitz" milestone and tickets for "Steinitz" release.
- Set up GitHub service hook to integrate commits with the Lighthouse.

Mon, Mar 2, 2008
---------------------------------------------------------------------
- Implemented Lead and Contact summary sidebar for individual Leads and Contacts.

Sun, Mar 1, 2008
---------------------------------------------------------------------
- Added core extension library.
- Implemented Opportunity summary sidebar for individual Opportunity.

Sat, Feb 28, 2008
---------------------------------------------------------------------
- Added gravatar support for leads and contacts.

Fri, Feb 27, 2008
---------------------------------------------------------------------
- Added [gravatar] plugin and implemented gravatars for notes.

Thu, Feb 26, 2008
---------------------------------------------------------------------
- Github commits are up on Twitter at http://twitter.com/fatfreecrm
- More refactoring to simplify handling of inline forms.
- Implemented adding related tasks for Leads, Accounts, Contacts, and Opportunities.

Wed, Feb 25, 2008
---------------------------------------------------------------------
- Refactored tasks, added ability to create related tasks (Campaigns only so far).

Tue, Feb 24, 2008
---------------------------------------------------------------------