@@ -8,7 +8,7 @@
       %small
         - if lead.status != "converted"
           = link_to_remote("Convert", :url => convert_lead_path(lead), :method => :get) << " | "
-        = link_to("Edit", lead_path(lead)) << " | "
+        = link_to_remote("Edit", :url => edit_lead_path(lead), :method => :get) << " | "
         = link_to_remote("Delete!", :url => lead_path(lead), :method => :delete, :before => visual_effect(:highlight, dom_id(lead), :startcolor => "#ffe4e1"))
       &nbsp;
     = link_to(lead.full_name, lead)
