@@ -1,8 +1,9 @@
-# logger.p "cvt context: " + @context.inspect
+# logger.p "edt context: " + @context.inspect
+# logger.p "session: " + session[@context].inspect
 id = dom_id(@lead)
-if @context == :convert_lead # Regular inline form called from Leads index.
+if @context == :edit_lead # Regular inline form called from Leads index.
   if session[@context]
-    page[id].replace_html :partial => "convert"
+    page[id].replace_html :partial => "edit"
     page << %Q/$("#{id}").onmouseover = $("#{id}").onmouseout = null; $("#{id}").style.background = "white";/
   else # Restore <LI> with the original properties and lead info.
     page[id].replace :partial => "lead", :collection => [ @lead ]
@@ -10,9 +11,10 @@ if @context == :convert_lead # Regular inline form called from Leads index.
 else # Inline form called from Lead landing page or somewehere else.
   if session[@context]
     page["#{id}_arrow"].replace_html "&#9660;"
-    page[dom_id(@lead, :title)].replace_html "Convert #{@lead.full_name}"
-    page[id].replace_html :partial => "convert"
-    page << "Effect.toggle('#{@context}', 'blind', { duration: 0.25, afterFinish: function() { $('account_name').focus(); } });"
+    page[dom_id(@lead, :title)].replace_html "Edit #{@lead.full_name}"
+    page[id].replace_html :partial => "edit"
+    page[@context].show
+    #page << "Effect.toggle('#{@context}', 'blind', { duration: 0.25, afterFinish: function() { $('lead_first_name').focus(); } });"
   else
     page["#{id}_arrow"].replace_html "&#9658;"
     page[dom_id(@lead, :title)].replace_html @lead.full_name
